--- a/css/style.css
+++ b/css/style.css
@@ -2074,9 +2074,9 @@ h3 {
 }
 
 /* line 4, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_bradcam.scss */
-.bradcam_bg_2 {
-  /* background-image: url(../img/banner/bradcam2.png); */
-}
+/* .bradcam_bg_2 {
+  background-image: url(../img/banner/bradcam2.png);
+} */
 
 /* line 9, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_bradcam.scss */
 .bradcam_area {
