Changing text colors and adding more png pictures

--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ h3 {
 
 /* line 46, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_btn.scss */
 .boxed_btn3 {
-  background: #C78665;
+  background: #B4A99D;
   padding: 9px 26px;
   margin-bottom: 0;
   font-size: 20px;
@@ -407,7 +407,7 @@ h3 {
 /* line 54, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_btn.scss */
 .boxed_btn3:hover {
   background: #FAF0F0;
-  color: #C78665;
+  color: #B4A99D;
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -498,7 +498,7 @@ h3 {
   font-size: 18px;
   font-weight: 400;
   font-family: "Muli", sans-serif;
-  color: #C78665;
+  color: #B4A99D;
   display: block;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -812,7 +812,7 @@ h3 {
 .header-area .main-header-area .main-menu ul li a::before {
   position: absolute;
   content: "";
-  background: #C78665;
+  background: #B4A99D;
   width: 100%;
   height: 2px;
   bottom: 0;
@@ -880,7 +880,7 @@ h3 {
 
 /* line 127, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_header.scss */
 .header-area .main-header-area .main-menu ul li .submenu li:hover a {
-  color: #C78665;
+  color: #B4A99D;
 }
 
 /* line 132, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_header.scss */
@@ -978,7 +978,7 @@ h3 {
 
 /* line 208, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_header.scss */
 .header-area .social_media_links ul li a:hover {
-  color: #C78665;
+  color: #B4A99D;
 }
 
 /* line 1, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
@@ -1055,7 +1055,7 @@ h3 {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) rotate(45deg);
-  /* background: #C78665; */
+  /* background: #B4A99D; */
   padding: 126px 55px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1196,7 +1196,7 @@ h3 {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  /* border: 1px solid #C78665; */
+  /* border: 1px solid #B4A99D; */
   top: -30px;
   left: -20px;
   z-index: -3;
@@ -1261,7 +1261,8 @@ h3 {
 
 /* line 1, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_wedding_counter.scss */
 .counter_bg {
-  background-image: url(../img/counter_bg/counter_bg.png);
+  background-image: url(../img/counter_bg/countdown.jpeg);
+  background-position: center !important;
 }
 
 /* line 4, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_wedding_counter.scss */
@@ -1326,7 +1327,7 @@ h3 {
   font-size: 60px;
   font-family: "Petit Formal Script", cursive;
   font-weight: 400;
-  color: #C78665;
+  color: #B4A99D;
   margin-bottom: 17px;
 }
 
@@ -1346,12 +1347,12 @@ h3 {
 
 /* line 1, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_program.scss */
 .program_bg_1 {
-  background-image: url(../img/program_details/1.png);
+  background-image: url(../img/program_details/ceremonia.jpeg);
 }
 
 /* line 4, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_program.scss */
 .program_bg_2 {
-  background-image: url(../img/program_details/2.png);
+  background-image: url(../img/program_details/recepcion.jpeg);
 }
 
 /* line 7, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_program.scss */
@@ -1392,7 +1393,7 @@ h3 {
   font-weight: 400;
   font-size: 24px;
   line-height: 30px;
-  color: #C78665;
+  color: #B4A99D;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -1486,7 +1487,7 @@ h3 {
 .attending_area .main_attending_area .popup_box h3 {
   text-align: center;
   font-size: 36px;
-  color: #C78665;
+  color: #B4A99D;
 }
 
 @media (max-width: 767px) {
@@ -1691,7 +1692,7 @@ h3 {
 /* line 37, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_story.scss */
 .love_story_area .single_lover_story h3 {
   font-size: 36px;
-  color: #C78665;
+  color: #B4A99D;
 }
 
 @media (max-width: 767px) {
@@ -1727,7 +1728,7 @@ h3 {
   -moz-border-radius: 50%;
   border-radius: 50%;
   background: #F9F3EF;
-  color: #C78665;
+  color: #B4A99D;
   display: inline-block;
   text-align: center;
   line-height: 35px;
@@ -1736,7 +1737,7 @@ h3 {
 
 /* line 65, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_story.scss */
 .love_story_area .single_lover_story .social_links ul li a:hover {
-  background: #C78665;
+  background: #B4A99D;
   color: #fff;
 }
 
@@ -1759,7 +1760,7 @@ h3 {
   position: absolute;
   height: 40px;
   width: 1px;
-  background: #C78665;
+  background: #B4A99D;
   left: 50%;
   content: "";
   bottom: -10px;
@@ -1769,7 +1770,7 @@ h3 {
 /* line 93, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_story.scss */
 .love_story_area .weding_time_line .single_time_line h3 {
   font-size: 24px;
-  color: #C78665;
+  color: #B4A99D;
   font-weight: 400;
 }
 
@@ -1961,7 +1962,7 @@ h3 {
 .location_area .location_info .location_inner h3 {
   font-size: 36px;
   font-weight: 400;
-  color: #C78665;
+  color: #B4A99D;
 }
 
 /* line 43, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_location.scss */
@@ -1976,7 +1977,7 @@ h3 {
 
 /* line 50, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_location.scss */
 .location_area .location_info .location_inner p span {
-  color: #C78665;
+  color: #B4A99D;
 }
 
 @media (max-width: 767px) {
@@ -1988,7 +1989,7 @@ h3 {
 
 /* line 59, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_location.scss */
 .location_area .location_info .location_inner .address_info .single_address h4 {
-  color: #C78665;
+  color: #B4A99D;
   font-size: 16px;
   font-family: "Muli", sans-serif;
   font-weight: 600;
@@ -2036,7 +2037,7 @@ h3 {
 
 /* line 17, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_footer.scss */
 .footer .footer_top ul li a:hover {
-  color: #C78665;
+  color: #B4A99D;
 }
 
 /* line 24, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_footer.scss */
@@ -2068,7 +2069,7 @@ h3 {
 
 /* line 40, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_footer.scss */
 .footer .copy-right_text .copy_right a {
-  color: #C78665;
+  color: #B4A99D;
 }
 
 /* line 1, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_bradcam.scss */
@@ -2116,7 +2117,7 @@ h3 {
 .bradcam_area .bradcam_text h3 {
   font-size: 80px;
   font-weight: 400;
-  color: #C78665;
+  color: #B4A99D;
 }
 
 @media (max-width: 767px) {
