Removing navbar, deleting some images, and changing ceremony and location section to be above gallery

--- a/css/style.css
+++ b/css/style.css
@@ -1797,14 +1797,14 @@ h3 {
 }
 
 /* line 43, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_gallery.scss */
-.gallery_imag_3 {
+/* .gallery_imag_3 {
   background-image: url(../img/gallery/A_J-67.JPEG);
-}
+} */
 
 /* line 46, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_gallery.scss */
-.gallery_imag_4 {
+/* .gallery_imag_4 {
   background-image: url(../img/gallery/A_J-130.JPEG);
-}
+} */
 
 /* line 49, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_gallery.scss */
 .gallery_imag_5 {
@@ -1822,26 +1822,26 @@ h3 {
 }
 
 /* line 58, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_gallery.scss */
-.gallery_imag_8 {
+/* .gallery_imag_8 {
   background-image: url(../img/gallery/A_J-197.JPG);
-}
+} */
 
 /* line 61, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_gallery.scss */
-.gallery_imag_9 {
+/* .gallery_imag_9 {
   background-image: url(../img/gallery/A_J-171.JPEG);
-}
+} */
 
-.gallery_imag_10 {
+/* .gallery_imag_10 {
   background-image: url(../img/gallery/A_J-229.JPG);
-}
+} */
 
-.gallery_imag_11 {
+/* .gallery_imag_11 {
   background-image: url(../img/gallery/A_J-234.jpeg);
-}
+} */
 
-.gallery_imag_12 {
+/* .gallery_imag_12 {
   background-image: url(../img/gallery/A_J-237.JPG);
-}
+} */
 
 .gallery_imag_13 {
   background-image: url(../img/gallery/A_J-268.JPG);
