--- a/css/style.css
+++ b/css/style.css
@@ -486,6 +486,28 @@ h3 {
   margin-bottom: 62px;
 }
 
+.secton_title__date {
+  height: 200px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .secton_title__date {
+    height: 150px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .secton_title__date {
+    height: 120px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .secton_title__date {
+    height: 90px;
+  }
+}
+
 @media (max-width: 767px) {
   /* line 1, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_section_title.scss */
   .section_title {
@@ -1017,6 +1039,70 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.slider_area__img {
+  height: 744px;
+}
+
+@media only screen and (max-width: 1800px) {
+  .slider_area__img {
+    height: 680px;
+  }
+}
+
+@media only screen and (max-width: 1440px) {
+  .slider_area__img {
+    height: 600px;
+  }
+}
+
+@media only screen and (max-width: 1340px) {
+  .slider_area__img {
+    height: 520px;
+  }
+}
+
+@media only screen and (max-width: 1140px) {
+  .slider_area__img {
+    height: 500px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .slider_area__img {
+    height: 400px;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .slider_area__img {
+    height: 320px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .slider_area__img {
+    height: 300px;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .slider_area__img {
+    height: 230px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .slider_area__img {
+    height: 180px;
+  }
+}
+
+@media only screen and (max-width: 38px) {
+  .slider_area__img {
+    height: 160px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1859,6 +1945,7 @@ h3 {
 .gallery_area {
   padding: 0 50px;
   padding-top: 90px;
+  margin-bottom: 150px;
 }
 
 @media (max-width: 767px) {
